--- a/app/views/answers/index.js.haml
+++ b/app/views/answers/index.js.haml
@@ -2,7 +2,7 @@ var list = $("#answers-list");
 if (!list.length) { $("#{  j render "index" }").modal(); }
 
 - if params[:page].present?
-  list.find("tbody").append('#{ j render @answers }');
+  list.find(".answer-items").append('#{ j render @answers }');
   - if @answers.total_pages == @answers.current_page
     list.find("#show_more").hide();
   - else
