--- a/app/views/submissions/index.js.haml
+++ b/app/views/submissions/index.js.haml
@@ -1,26 +1,26 @@
 var list = $("#submissions-list");
 if (!list.length) { $("#{  j render "index" }").modal(); }
 
-- if params[:created_before].present? || params[:created_after].present? || params[:question_id].present? || params[:question_type].present?
+- if params[:created_before].present? || params[:created_after].present? || params[:question_id].present? || params[:choice_id].present? || params[:image_id].present?
   list.find("#show_more").hide();
   - unless @submissions.next_page.nil?
-    list.find("#show_more").attr("href", "#{ survey_submissions_path(@survey, created_before: params[:created_before], created_after: params[:created_after], question_id: params[:question_id], question_type: params[:question_type], page: @submissions.next_page) }").show();
+    list.find("#show_more").attr("href", "#{ survey_submissions_path(@survey, created_before: params[:created_before], created_after: params[:created_after], question_id: params[:question_id], choice_id: params[:choice_id], image_id: params[:image_id], page: @submissions.next_page) }").show();
   - if params[:page].present?
-    list.find("tbody").append('#{ j render @submissions }');
+    list.find(".submission-items").append('#{ j render @submissions }');
     - if @submissions.total_pages == @submissions.current_page
       list.find("#show_more").hide();
   - else
-    list.find("tbody").html('#{ j render @submissions }');
+    list.find(".submission-items").html('#{ j render @submissions }');
 
 - elsif params[:page].present?
-  list.find("tbody").append('#{ j render @submissions }');
+  list.find(".submission-items").append('#{ j render @submissions }');
   - if @submissions.total_pages == @submissions.current_page
     list.find("#show_more").hide();
   - else
     list.find("#show_more").attr("href", "#{ survey_submissions_path(@survey, page: @submissions.current_page + 1)}").show();
 
 - else
-  list.find("tbody").html('#{ j render @submissions }');
+  list.find(".submission-items").html('#{ j render @submissions }');
   - if @submissions.total_pages == @submissions.current_page
     list.find("#show_more").hide();
   - else
