--- a/app/assets/stylesheets/submissions.scss
+++ b/app/assets/stylesheets/submissions.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.submission-search {
+  margin-bottom: 15px;
+  width: 70%;
+}
+
 .submitted-answers {
   .answer-item {
     padding: 10px;
