--- a/app/views/submissions/_choice_select.haml
+++ b/app/views/submissions/_choice_select.haml
@@ -1,6 +1,5 @@
-%label{for: "choice_id"} Answer
 = select_tag :choice_id,
   options_for_select(choices.collect {|c| [c.title, c.id]}),
   prompt: "--- Choice ---",
-  id: "choice_id", data: { behavior: "choices_select" },
+  data: { behavior: "choices_select" },
   class: "form-control input-sm"
