--- a/app/assets/stylesheets/submissions.scss
+++ b/app/assets/stylesheets/submissions.scss
@@ -19,3 +19,15 @@
     }
   }
 }
+
+#submissions-count {
+  font-size: 14px;
+  span {
+    padding: 3px 8px 3px 8px;
+    background-color: #f72969;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: bold;
+    margin-right: 5px;
+  }
+}
