--- a/app/views/surveys/_image_fields.html.haml
+++ b/app/views/surveys/_image_fields.html.haml
@@ -2,12 +2,9 @@
   .media
     .media-left
       - if f.object.file.present?
-        = image_tag(f.object.file.url(:thumb),
-          class: "img-responsive img-thumbnail",
-            width: 70, style: 'overflow-y: hidden; height: 70px;')
+        .img-preview{style: "background-image: url(#{f.object.file.url(:thumb)})"}
       - else
-        = image_tag("default_avatar", class: "img-responsive img-thumbnail",
-          width: 70, style: 'overflow-y: hidden; height: 70px;')
+        .img-preview{style: "background-image: url(#{asset_path('default_avatar.png')})"}
     .media-body
       .file-upload.btn.btn-primary.btn-xs
         %span Upload an image for this question
