--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -25,7 +25,7 @@
               = link_to "Surveys list", [@survey.customer, :surveys]
             - if policy(@survey).show?
               %li
-                = link_to "Preview this survey", [@survey.customer, @survey]
+                = link_to "Survey report", [@survey.customer, @survey]
             - if policy(@survey).update?
               %li
                 = link_to "Edit survey", [:edit, @survey.customer, @survey]
